Add go to desktop, computer, trash, and network to menu.
git-svn-id: https://libfm.svn.sourceforge.net/svnroot/libfm/branches/libfm@6 0a16f17f-54f8-45a0-9d6a-1c3e01b6f470

--- a/src/Makefile
+++ b/src/Makefile
@@ -161,7 +161,7 @@ mandir = ${datarootdir}/man
 mkdir_p = /bin/mkdir -p
 oldincludedir = /usr/include
 pdfdir = ${docdir}
-prefix = /usr
+prefix = /urs
 program_transform_name = s,x,x,
 psdir = ${docdir}
 sbindir = ${exec_prefix}/sbin
